--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name" : "eventvat",
   "version" : "0.1.3",
   "description" : "Evented, in-process key/value store for Node.js and the browser",
-  "main" : "./lib/index.js",
+  "main" : "./lib/eventvat.js",
   "directories" : {
     "lib" : "./lib",
     "example" : "./example"
